2nd-lab, adding TextCounter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/enter_text"/>
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/countButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/count" />
+
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/resultTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/click_on_this_button" />
+        android:layout_marginTop="16dp"
+        android:text="@string/result"
+        android:visibility="invisible"/>
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="283dp"
-        android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:onClick="button1_onClick"
-        android:text="@string/button" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="button2_onClick"
-        android:text="@string/click2" />
 </LinearLayout>
